:alien: update for changed database api